...
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/buttonSchedules"
            android:layout_width="192dp"

            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/background"
...
